<resources>
    <string name="app_name">TimeMngr</string>
    <string name="title_alarm">Alarm</string>
    <string name="title_stopwatch">Stopwatch</string>
    <string name="title_timer">Timer</string>
    <string name="notSelected">Not selected</string>

    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>

    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="selectDays">Select days in week</string>
</resources>